--- a/src/Component/Gun/Gun.css
+++ b/src/Component/Gun/Gun.css
@@ -1,6 +1,6 @@
 .card{
     width: 300px;
-    height: 480px;
+    height: 550px;
     background-color: white;
     display: grid;
     clip-path: polygon(15% 0%, 100% 0, 100% 86%, 85% 100%, 0 100%, 0% 16%);
@@ -9,4 +9,13 @@
     width: 100%;
    height:300px;
    margin: 5px;
+   
+}
+.card h2{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.gun-info{
+    line-height: 0.5;
+    padding:0px 20px;
 }
